--- a/plugins/filter_encrypt/CMakeLists.txt
+++ b/plugins/filter_encrypt/CMakeLists.txt
@@ -1,15 +1,15 @@
 set(src
-        utils/utils.c
-        utils/crypto_utils.c
-        json/mjson.c
-        hashmap/hashmap.c
-        utils/ip_utils.c
-        encryption_libs/ip_encryption.c
-        encryption_libs/cryptopANT.c
-        encryption_libs/aes_deterministic.c
-        encryption_libs/aes_gcm_hmac_deterministic.c
-        encryption_libs/aes_gcm.c
-        encryption_libs/hmac.c
+        utils.c
+        crypto_utils.c
+        mjson.c
+        hashmap.c
+        ip_utils.c
+        ip_encryption.c
+        cryptopANT.c
+        aes_deterministic.c
+        aes_gcm_hmac_deterministic.c
+        aes_gcm.c
+        hmac.c
         encrypt.c)
 
 FLB_PLUGIN(filter_encrypt "${src}" "")
